# LINKIT

./: .env.exemple  .gitignore  README.md  REFACTORING_SUMMARY.md  check_build.sh  compose.yaml.old  docker-compose.yml  init.sql  package-lock.json  package.json
backend/: .dockerignore  Cargo.toml  Dockerfile  lcov.info  tarpaulin-report.html  tarpaulin.toml
backend/coverage/: index.html  lcov.info  tarpaulin-report.html
backend/src/: lib.rs  main.rs
backend/src/adapters/: mod.rs
backend/src/adapters/db/: mod.rs  postgres_ban_repository.rs  postgres_channel_repository.rs  postgres_member_repository.rs  postgres_message_repository.rs  postgres_reaction_repository.rs  postgres_reagi_repository.rs  postgres_role_repository.rs  postgres_server_repository.rs  postgres_user_repository.rs
backend/src/adapters/http/: constants.rs  error.rs  mod.rs
backend/src/adapters/mongodb/: mod.rs  mongo_message_repository.rs
backend/src/adapters/websocket/: channel_handler.rs  mod.rs  server_handler.rs  state.rs  types.rs
backend/src/domain/: jwt.rs  mod.rs
backend/src/domain/entities/: ban.rs  channel.rs  member.rs  message.rs  mod.rs  reaction.rs  reagi.rs  role.rs  server.rs  user.rs
backend/src/domain/ports/: ban_repository.rs  channel_repository.rs  member_repository.rs  mod.rs  (+6 more)
backend/src/test_unitaire/: mock_ban_repository.rs  mock_repositories.rs  mod.rs
backend/tests/: advanced_tests.rs.bak  coverage_boost_tests.rs  integration_tests.rs  unit_tests.rs  usecase_coverage_tests.rs
backend/tests/test_unitaire/: channel_test.rs  message_test.rs  user_test.rs
(+189 files in other folders)
